fix z-index

--- a/modest.css
+++ b/modest.css
@@ -615,7 +615,7 @@ text-decoration: underline;
     .header{
         display: flex;
         position: fixed;
-        z-index: 9999;
+        z-index: 999;
         width: 100%;
     }
 
